# PasswordManager

./: .gitignore  CHANGES.md  README.md  pyproject.toml
app/: deps.py  main.py
app/internal/: config.py  database.py
app/models/: auth.py  common.py  dbtables.py  entries.py  groups.py
app/routers/: auth.py  entries.py  groups.py  main.py  utils.py
docs/: mkdocs.yml
