[project]
name = "newguy103-passwordmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
